sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
	var swap=true
	while (swap){
		echange=false
		for(i<-0 to getNombreValeurs()-2)
			if(plusPetit(i,i+1))
				
				swap=true
	}
}
